# tau-chrono

./: .gitignore  LICENSE  README.md  RESULTS_2026-04.md  demo.py  pyproject.toml
code/: exp1_nonuniform.py  exp1_nonuniform_noise_scaling.py  exp2_drift.py  exp3_petz.py  exp4_bias.py  exp5_retrodiction.py  exp6_monitor.py  exp7_fair_ml_comparison.py  exp7_physml.py  qec_tuna9.py
docs/: index.html  quantum-lm.html
examples/: example_why_tauchrono.py
experiments/: qec_willow_validation.py  recompute_exp4.py  run_all_tuna9.py  run_azure_quantum.py  run_deep_ceiling.py  run_ionq_simulator.py  run_showcase.py
notebooks/: quickstart.ipynb
outreach/: qutech_email.md
paper/: paper.tex  quantum_diffusion_lm_paper.tex  supplement.tex
research/: diffusion_llm_next_steps.md  diffusion_vs_ar_benchmark_analysis.md  quantum_llm_benchmark.md  tau_conditioned_denoising_design.md
results/: azure_ionq_simulator_20260321_004922.json  comparison_d3.json  comparison_d5.json  deep_ceiling_tuna9_20260319_214908.json  diffusion_decoder_all_results.json  exp1_nonuniform_noise_scaling.json  exp2_noise_drift.json  exp3_petz_vs_standard.json  exp4_biased_noise.json  exp5_retrodiction_gap.json  exp6_health_monitor.json  exp7_fair_ml_comparison.json  exp7_physics_ml_comparison.json  exp8_data_efficiency.json  exp8_honest_data_efficiency.json  exp9_correlated.json  exp9_diffusion_decoder.json  generate_figures.py  generate_showcase_figures.py  generate_v2_figures.py  prereg_garnet_bv.json  qec_tuna9_results.json  qec_willow_validation.json  quantum_lm_t9_20260321_092820.json  (+5 more)
(+43 files in other folders)
